documentation for index, show, store account
